<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.karpeko.coffehouse.ui.home.HomeFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.karpeko.coffehouse.ui.dashboard.DashboardFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.karpeko.coffehouse.ui.notifications.NotificationsFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_activities"
        android:name="com.karpeko.coffehouse.ui.activities.ActivitiesFragment"
        android:label="@string/activities"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.karpeko.coffehouse.ui.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account"/>
</navigation>