<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:backgroundTint="@color/cream"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="170dp"
        android:hint="@string/enterLogin"
        android:inputType="text"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:textColor="@color/dark_chocolate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="81dp"
        android:hint="@string/password"
        android:textColor="@color/dark_chocolate"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="203dp"
        android:layout_height="54dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="102dp"
        android:text="@string/login"
        android:textColor="@color/cream"
        android:textSize="15sp"
        android:backgroundTint="@color/coffee_brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="228dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:onClick="goToRegister"
        android:text="@string/notRegister"
        android:textColor="@color/dark_chocolate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="0.571"
        tools:ignore="MissingConstraints,UsingOnClickInXml" />


</androidx.constraintlayout.widget.ConstraintLayout>